jest and webpack and es6
Jest is working with es6, mostly. We have to use require (otherwise we
need to introduce babel) but all the es6 syntax works out of the box so
it's a small price.

webpack is packing and although it's making large bundles and we need to
figure out pruning etc at least it's working

The graphs are working. Very nice. But I think the c172 ceiling is below
20,000 so it's odd that Vx and Vy don't converge. However I do have some
failing tests so ...

--- a/js/package.json
+++ b/js/package.json
@@ -1,11 +1,23 @@
 {
   "dependencies": {
-    "mathjs": "^9.4.0"
+    "mathjs": "^9.4.0",
+    "vega": "^5.20.2",
+    "vega-embed": "^6.18.2",
+    "vega-lite": "^5.1.0"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "http-server": "^0.12.3",
+    "jest": "^26.6.3",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0"
   },
   "scripts": {
     "test": "jest"
-  }
+  },
+  "name": "lowry",
+  "version": "1.0.0",
+  "directories": {
+    "test": "test"
+  },
+  "author": "Hans Fugal"
 }
